--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -30,3 +30,29 @@ body {
     height: 100%;
     width: 100%;
 }
+
+@layer utilities {
+    .hover-underline {
+        @apply cursor-pointer hover:text-accent transition-ease relative after:absolute after:bottom-0 after:left-0 after:h-[1px] after:w-full after:origin-left after:scale-x-0 after:bg-accent after:transition-transform hover:after:scale-x-100 after:duration-500;
+    }
+
+    .transition-ease {
+        @apply transition-all duration-300 ease-in-out;
+    }
+
+    .section {
+        @apply py-24 max-md:py-16;
+    }
+
+    .section-container {
+        @apply container mx-auto px-4 sm:px-6 lg:px-8;
+    }
+
+    .header-responsive {
+        @apply sm:text-2xl md:text-3xl lg:text-4xl;
+    }
+
+    .body-responsive {
+        @apply sm:text-base md:text-lg lg:text-xl;
+    }
+}
