--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -8,7 +8,7 @@
     --font-serif: 'Agbalumo', cursive;
     --color-primary: #ffffff;
     --color-secondary: #8b8e92;
-    --color-accent: #579ddfe1;
+    --color-accent: #6fa1ff;
     --nav-height: 107px;
 
     font-optical-sizing: auto;
